Found two articles, wrote notes on one

--- a/Notes/christian/christian.bib
+++ b/Notes/christian/christian.bib
@@ -1,3 +1,29 @@
+@article{COBO2017294,
+title = {Differences between blind people's cognitive maps after proximity and distant exploration of virtual environments},
+journal = {Computers in Human Behavior},
+volume = {77},
+pages = {294-308},
+year = {2017},
+issn = {0747-5632},
+doi = {https://doi.org/10.1016/j.chb.2017.09.007},
+url = {https://www.sciencedirect.com/science/article/pii/S0747563217305332},
+author = {Antonio Cobo and Nancy E. Guerrón and Carlos Martín and Francisco {del Pozo} and José Javier Serrano},
+keywords = {Cognitive mapping, Blind people, Virtual reality, Smartphone},
+abstract = {Visits to simulations of real spaces in virtual reality have been proposed as a means for blind people to gain spatial knowledge regarding the disposition of obstacles within a place before actually visiting it. Within the present study, different configurations of distant and proximity exploration were compared to each other, in order to test whether differences in effectiveness and efficiency lead to changes in exploration behaviour, without a detrimental impact on cognitive-map quality and usefulness. Evidence supports effectiveness improvements due to distant exploration (p-value = 0.0006). The flat-spotlight distant-configuration entails a 53% reduction in discovery time (p-value = 0.0027). A trend is observed entailing a 38% reduction in the duration of the overall exploration stage for a flat spotlight configuration (p-value = 0.067). Wall-detection effectiveness alters exploration duration (p-value = 0.012). Improvements in effectiveness and discovery time are associated with shorter overall exploration time. Duration of exploration after discovery time depends on wall-detection effectiveness. Benefits from a distant exploration configuration are not enough to build better cognitive maps.}
+}
+@Article{electronics10080953,
+AUTHOR = {Oh, Uran and Joh, Hwayeon and Lee, YunJung},
+TITLE = {Image Accessibility for Screen Reader Users: A Systematic Review and a Road Map},
+JOURNAL = {Electronics},
+VOLUME = {10},
+YEAR = {2021},
+NUMBER = {8},
+ARTICLE-NUMBER = {953},
+URL = {https://www.mdpi.com/2079-9292/10/8/953},
+ISSN = {2079-9292},
+ABSTRACT = {A number of studies have been conducted to improve the accessibility of images using touchscreen devices for screen reader users. In this study, we conducted a systematic review of 33 papers to get a holistic understanding of existing approaches and to suggest a research road map given identified gaps. As a result, we identified types of images, visual information, input device and feedback modalities that were studied for improving image accessibility using touchscreen devices. Findings also revealed that there is little study how the generation of image-related information can be automated. Moreover, we confirmed that the involvement of screen reader users is mostly limited to evaluations, while input from target users during the design process is particularly important for the development of assistive technologies. Then we introduce two of our recent studies on the accessibility of artwork and comics, AccessArt and AccessComics, respectively. Based on the identified key challenges, we suggest a research agenda for improving image accessibility for screen reader users.},
+DOI = {10.3390/electronics10080953}
+}
 @inproceedings{10.1145/3173574.3173772,
 author = {Holloway, Leona and Marriott, Kim and Butler, Matthew},
 title = {Accessible Maps for the Blind: Comparing 3D Printed Models with Tactile Graphics},
