--- a/ReadMe
+++ b/ReadMe
@@ -1,2 +1,3 @@
-Welcome to the repository for the map accessibility project. There are no rules/regulations yet, feel free to add to this with said rules and possible formats for
-how we want to orginize this!
+Welcome to the repository for the map accessibility project.
+Each research paper PDF shall be placed into the PDF folder from main.
+Markdown and .bib files will go into each of our respective folders inside of Notes.
