--- a/Notes/Aaron/aaron.bib
+++ b/Notes/Aaron/aaron.bib
@@ -1,3 +1,4 @@
+#Aaron Cherney .bib file
 @article{doi:10.1080/10447318.2017.1279827,
 author = {Radu-Daniel Vatavu},
 title = {Visual Impairments and Mobile Touchscreen Interaction: State-of-the-Art, Causes of Visual Impairment, and Design Guidelines},
@@ -8,6 +9,52 @@ pages = {486-509},
 year  = {2017},
 publisher = {Taylor & Francis},
 doi = {10.1080/10447318.2017.1279827},
-URL = {https://doi.org/10.1080/10447318.2017.1279827},
-eprint = {https://doi.org/10.1080/10447318.2017.1279827}
+
+URL = { 
+        https://doi.org/10.1080/10447318.2017.1279827
+    
+},
+eprint = { 
+        https://doi.org/10.1080/10447318.2017.1279827
+    
+}
+
+}
+
+@inproceedings{10.1145/2468356.2468364,
+author = {Abd Hamid, Nazatul Naquiah and Edwards, Alistair D.N.},
+title = {Facilitating Route Learning Using Interactive Audio-Tactile Maps for Blind and Visually Impaired People},
+year = {2013},
+isbn = {9781450319522},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2468356.2468364},
+doi = {10.1145/2468356.2468364},
+abstract = {In preparing to navigate in an unfamiliar location, a blind person may use non-visual maps. This project is aimed at developing more effective, interactive audio-tactile maps. The maps will be novel in using speech and non-speech sounds and allowing the user to rotate the map, thereby facilitating the building of an egocentric cognitive map. Initial requirements have been gathered from mobility instructors. Their main conclusions are that immoveable objects represent the most useful landmarks and that certain ambient sounds can provide most valuable orientation information.},
+booktitle = {CHI '13 Extended Abstracts on Human Factors in Computing Systems},
+pages = {37–42},
+numpages = {6},
+keywords = {orientation, touch, audio-tactile maps, route learning, blindness, visual impairment, speech, auditory icons, multimodal, accessibility, tactile maps},
+location = {Paris, France},
+series = {CHI EA '13}
+}
+
+@article{10.1145/2815169.2815171,
+author = {Medina, Jonathas Leontino and Cagnin, Maria Istela and Paiva, D\'{e}bora Maria Barroso},
+title = {Investigating Accessibility on Web-Based Maps},
+year = {2015},
+issue_date = {June 2015},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {15},
+number = {2},
+issn = {1559-6915},
+url = {https://doi.org/10.1145/2815169.2815171},
+doi = {10.1145/2815169.2815171},
+abstract = {This paper presents results of an accessibility evaluation carried out with web-based map applications. Three points of view were considered: experts on accessibility, evaluation tools and final users (partially or totally blind people). The document WCAG 2.0 (Web Content Accessibility Guidelines) provided us with guidelines for evaluation and GQM (Goal, Question and Metric) approach was used to define and set measurable goals. A number of problems was identified and none of the evaluated applications entirely meet the analyzed criteria.},
+journal = {SIGAPP Appl. Comput. Rev.},
+month = {aug},
+pages = {17–26},
+numpages = {10},
+keywords = {web-based maps, accessibility evaluation, web accessibility, WCAG 2.0}
 }
