Updated Markdown And .bib

--- a/Notes/Aaron/aaron.bib
+++ b/Notes/Aaron/aaron.bib
@@ -58,3 +58,18 @@ pages = {17–26},
 numpages = {10},
 keywords = {web-based maps, accessibility evaluation, web accessibility, WCAG 2.0}
 }
+@InProceedings{10.1007/978-3-319-41267-2_20,
+author="G{\"o}tzelmann, Timo",
+editor="Miesenberger, Klaus
+and B{\"u}hler, Christian
+and Penaz, Petr",
+title="CapMaps",
+booktitle="Computers Helping People with Special Needs",
+year="2016",
+publisher="Springer International Publishing",
+address="Cham",
+pages="146--152",
+abstract="Tactile maps can be useful tools for blind people for navigation and orientation tasks. Apart from static maps, there are techniques to augment tactile maps with audio content. They can be used to interact with the map content, to offer extra information and to reduce the tactile complexity of a map. Studies show that audio-tactile maps can be more efficient and satisfying for the user than pure tactile maps without audio feedback. A major challenge of audio-tactile maps is the linkage of tactile elements with audio content and interactivity. This paper introduces a novel approach to link 3D printed tactile maps with mobile devices, such as smartphones and tablets, in a flexible way to enable interactivity and audio-support. By integrating conductive filaments into the printed maps it seamlessly integrates into the 3D printing process. This allows to automatically recognize the tactile map by a single press at its corner. Additionally, the arrangement of the tactile map on the mobile device is flexible and detected automatically which eases the use of these maps. The practicability of this approach is shown by a dedicated feasibility study.",
+isbn="978-3-319-41267-2"
+}
+
