Updates to aaron.md and .bib

--- a/Notes/Aaron/aaron.bib
+++ b/Notes/Aaron/aaron.bib
@@ -73,3 +73,34 @@ abstract="Tactile maps can be useful tools for blind people for navigation and o
 isbn="978-3-319-41267-2"
 }
 
+@article{RODRIGUEZSANCHEZ20147210,
+title = {Accessible smartphones for blind users: A case study for a wayfinding system},
+journal = {Expert Systems with Applications},
+volume = {41},
+number = {16},
+pages = {7210-7222},
+year = {2014},
+issn = {0957-4174},
+doi = {https://doi.org/10.1016/j.eswa.2014.05.031},
+url = {https://www.sciencedirect.com/science/article/pii/S095741741400311X},
+author = {M.C. Rodriguez-Sanchez and M.A. Moreno-Alvarez and E. Martin and S. Borromeo and J.A. Hernandez-Tamames},
+keywords = {Accessibility, Visually impaired users, User interfaces, Touch screens, Wayfinding},
+abstract = {While progress on assistive technologies have been made, some blind users still face several problems opening and using basic functionalities when interacting with touch interfaces. Sometimes, people with visual impairments may also have problems navigating autonomously, without personal assistance, especially in unknown environments. This paper presents a complete solution to manage the basic functions of a smartphone and to guide users using a wayfinding application. This way, a blind user could go to work from his home in an autonomous way using an adaptable wayfinding application on his smartphone. The wayfinding application combines text, map, auditory and tactile feedback for providing the information. Eighteen visually impaired users tested the application. Preliminary results from this study show that blind people and limited vision users can effectively use the wayfinding application without help. The evaluation also confirms the usefulness of extending the vibration feedback to convey distance information as well as directional information. The validation was successful for iOS and Android devices.}
+}
+
+@InProceedings{10.1007/978-3-319-07440-5_15,
+author="Neto, Jos{\'e} Monserrat
+and Freire, Andr{\'e} P.
+and Souto, Sabrina S.
+and Ab{\'i}lio, Ramon S.",
+editor="Stephanidis, Constantine
+and Antona, Margherita",
+title="Usability Evaluation of a Web System for Spatially Oriented Audio Descriptions of Images Addressed to Visually Impaired People",
+booktitle="Universal Access in Human-Computer Interaction. Universal Access to Information and Knowledge",
+year="2014",
+publisher="Springer International Publishing",
+address="Cham",
+pages="154--165",
+abstract="This paper describes a web system designed to provide spatially oriented audio descriptions of an image for visually impaired users. The system uses a hardware-independent platform of the technique of multimodal presentation of images. Visually impaired users interact with an image displayed on the screen while moving the cursor -- with a mouse or a tablet (pen or finger touch) -- and listening to the audio description of previously marked areas within the image. The paper also describes the usability evaluation performed with five participants and its main results. Generally, the five participants accomplished the usability test tasks and could better understand the image displayed. The paper also describes the main findings and discusses some implications for design, suggesting some improvements.",
+isbn="978-3-319-07440-5"
+}
