Updated and added 2 papers to aaron's md and bib

--- a/Notes/Aaron/aaron.bib
+++ b/Notes/Aaron/aaron.bib
@@ -58,6 +58,7 @@ pages = {17–26},
 numpages = {10},
 keywords = {web-based maps, accessibility evaluation, web accessibility, WCAG 2.0}
 }
+
 @InProceedings{10.1007/978-3-319-41267-2_20,
 author="G{\"o}tzelmann, Timo",
 editor="Miesenberger, Klaus
@@ -103,4 +104,36 @@ address="Cham",
 pages="154--165",
 abstract="This paper describes a web system designed to provide spatially oriented audio descriptions of an image for visually impaired users. The system uses a hardware-independent platform of the technique of multimodal presentation of images. Visually impaired users interact with an image displayed on the screen while moving the cursor -- with a mouse or a tablet (pen or finger touch) -- and listening to the audio description of previously marked areas within the image. The paper also describes the usability evaluation performed with five participants and its main results. Generally, the five participants accomplished the usability test tasks and could better understand the image displayed. The paper also describes the main findings and discusses some implications for design, suggesting some improvements.",
 isbn="978-3-319-07440-5"
+}
+
+@article{LAHIB201816,
+title = {Evaluating Fitts’ law on vibrating touch-screen to improve visual data accessibility for blind users},
+journal = {International Journal of Human-Computer Studies},
+volume = {112},
+pages = {16-27},
+year = {2018},
+issn = {1071-5819},
+doi = {https://doi.org/10.1016/j.ijhcs.2018.01.005},
+url = {https://www.sciencedirect.com/science/article/pii/S1071581918300053},
+author = {Manahel El Lahib and Joe Tekli and Youssef Bou Issa},
+keywords = {Blind users, Pointing method, Visual data accessibility, Fitts’ law, Vibrating touch-screen},
+abstract = {The pointing task is the process of pointing to an object on a computer monitor using a pointing device, or physically touching an object with the hand or finger. It is an important element for users when manipulating visual computer interfaces such as traditional screens and touch-screens. In this context, Fitts’ Law remains one of the central studies that have mathematically modeled the pointing method, and was found to be a good predictor of the average time needed to perform a pointing task. Yet, in our modern computerized society, accessing visual information becomes a central need for all kinds of users, namely users who are blind or visually impaired. Hence, the goal of our study is to evaluate whether Fitts’ Law can be applied for blind candidates using the vibration modality on a touch-screen. To achieve this, we first review the literature on Fitts’ Law and visual data accessibility solutions for blind users. Then, we introduce an experimental framework titled FittsEVAL studying the ability of blind users to tap specific shapes on a touch-screen, while varying different parameters, namely: target distance, target size, and the angle of attack of the pointing task. Experiments on blindfolded and blind candidates show that Fitts’ Law can be effectively applied for blind users using a vibrating touch-screen under certain parameters (i.e., when varying target distance and size), while it is not verified under others (i.e., when varying the angle of attack). This can be considered as a first step toward a more complete experimental evaluation of vibrating touch-screen accessibility, toward designing more adapted interfaces for the blind.}
+}
+
+@inproceedings{10.1145/3373625.3416999,
+author = {Sharif, Ather and Pao, Victoria and Reinecke, Katharina and Wobbrock, Jacob O.},
+title = {The Reliability of Fitts’s Law as a Movement Model for People with and without Limited Fine Motor Function},
+year = {2020},
+isbn = {9781450371032},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3373625.3416999},
+doi = {10.1145/3373625.3416999},
+abstract = {For over six decades, Fitts’s law (1954) has been utilized by researchers to quantify human pointing performance in terms of “throughput,” a combined speed-accuracy measure of aimed movement efficiency. Throughput measurements are commonly used to evaluate pointing techniques and devices, helping to inform software and hardware developments. Although Fitts’s law has been used extensively in HCI and beyond, its test-retest reliability, both in terms of throughput and model fit, from one session to the next, is still unexplored. Additionally, despite the fact that prior work has shown that Fitts’s law provides good model fits, with Pearson correlation coefficients commonly at r=.90 or above, the model fitness of Fitts’s law has not been thoroughly investigated for people who exhibit limited fine motor function in their dominant hand. To fill these gaps, we conducted a study with 21 participants with limited fine motor function and 34 participants without such limitations. Each participant performed a classic reciprocal pointing task comprising vertical ribbons in a 1-D layout in two sessions, which were at least four hours and at most 48 hours apart. Our findings indicate that the throughput values between the two sessions were statistically significantly different, both for people with and without limited fine motor function, suggesting that Fitts’s law provides low test-retest reliability. Importantly, the test-retest reliability of Fitts’s throughput metric was 4.7% lower for people with limited fine motor function. Additionally, we found that the model fitness of Fitts’s law as measured by Pearson correlation coefficient, r, was .89 (SD=0.08) for people without limited fine motor function, and .81 (SD=0.09) for people with limited fine motor function. Taken together, these results indicate that Fitts’s law should be used with caution and, if possible, over multiple sessions, especially when used in assistive technology evaluations.},
+booktitle = {The 22nd International ACM SIGACCESS Conference on Computers and Accessibility},
+articleno = {16},
+numpages = {15},
+keywords = {throughput, models, Fitts’s law, model fitness, test-retest reliability, mouse},
+location = {Virtual Event, Greece},
+series = {ASSETS '20}
 }
