Added PDF's and updated last paper

--- a/Notes/Aaron/aaron.bib
+++ b/Notes/Aaron/aaron.bib
@@ -137,3 +137,37 @@ keywords = {throughput, models, Fitts’s law, model fitness, test-retest reliab
 location = {Virtual Event, Greece},
 series = {ASSETS '20}
 }
+
+@inproceedings{10.1145/274644.274681,
+author = {Friedlander, Naomi and Schlueter, Kevin and Mantei, Marilyn},
+title = {Bullseye! When Fitts' Law Doesn't Fit},
+year = {1998},
+isbn = {0201309874},
+publisher = {ACM Press/Addison-Wesley Publishing Co.},
+address = {USA},
+url = {https://doi.org/10.1145/274644.274681},
+doi = {10.1145/274644.274681},
+booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+pages = {257–264},
+numpages = {8},
+location = {Los Angeles, California, USA},
+series = {CHI '98}
+}
+
+@inproceedings{10.1145/1168987.1169008,
+author = {Cohen, Robert F. and Haven, Valerie and Lanzoni, Jessica A. and Meacham, Arthur and Skaff, Joelle and Wissell, Michael},
+title = {Using an Audio Interface to Assist Users Who Are Visually Impaired with Steering Tasks},
+year = {2006},
+isbn = {1595932909},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/1168987.1169008},
+doi = {10.1145/1168987.1169008},
+abstract = {In this paper we describe the latest results in our on-going study of techniques to present relational graphs to users with visual impairments. Our work tests the effectiveness of the PLUMB software package, which uses audio feedback and the pen-based Tablet PC interface to relay graphs and diagrams to users with visual impairments. Our study included human trials with ten participants without usable vision, in which we evaluated the users' ability to perform steering tasks under varying conditions.},
+booktitle = {Proceedings of the 8th International ACM SIGACCESS Conference on Computers and Accessibility},
+pages = {119–124},
+numpages = {6},
+keywords = {accessibility, graph, sonification, audio},
+location = {Portland, Oregon, USA},
+series = {Assets '06}
+}
