--- a/Notes/christian/christian.bib
+++ b/Notes/christian/christian.bib
@@ -1,3 +1,39 @@
+@inproceedings{10.1145/2207676.2207734,
+author = {Yatani, Koji and Banovic, Nikola and Truong, Khai},
+title = {SpaceSense: Representing Geographical Information to Visually Impaired People Using Spatial Tactile Feedback},
+year = {2012},
+isbn = {9781450310154},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2207676.2207734},
+doi = {10.1145/2207676.2207734},
+abstract = {Learning an environment can be challenging for people with visual impairments. Braille maps allow their users to understand the spatial relationship between a set of places. However, physical Braille maps are often costly, may not always cover an area of interest with sufficient detail, and might not present up-to-date information. We built a handheld system for representing geographical information called SpaceSense, which includes custom spatial tactile feedback hardware-multiple vibration motors attached to different locations on a mobile touch-screen device. It offers high-level information about the distance and direction towards a destination and bookmarked places through vibrotactile feedback to help the user maintain the spatial relationships between these points. SpaceSense also adapts a summarization technique for online user reviews of public and commercial venues. Our user study shows that participants could build and maintain the spatial relationships between places on a map more accurately with SpaceSense compared to a system without spatial tactile feedback. They pointed specifically to having spatial tactile feedback as the contributing factor in successfully building and maintaining their mental map.},
+booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+pages = {415–424},
+numpages = {10},
+keywords = {handheld devices, geographical information representation, users with visual impairments, touch screens, vibrotactile feedback, assistive technology},
+location = {Austin, Texas, USA},
+series = {CHI '12}
+}
+@inproceedings{10.1145/1851600.1851606,
+author = {Su, Jing and Rosenzweig, Alyssa and Goel, Ashvin and de Lara, Eyal and Truong, Khai N.},
+title = {Timbremap: Enabling the Visually-Impaired to Use Maps on Touch-Enabled Devices},
+year = {2010},
+isbn = {9781605588353},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/1851600.1851606},
+doi = {10.1145/1851600.1851606},
+abstract = {Mapping applications on mobile devices have gained widespread popularity as a means for enhancing user mobility and ability to explore new locations and venues. Visually impaired users currently rely on computer text-to-speech or human-spoken descriptions of maps and indoor spaces. Unfortunately, speech-based descriptions are limited in their ability to succinctly convey complex layouts or spacial positioning.This paper presents Timbremap, a sonification interface enabling visually impaired users to explore complex indoor layouts using off-the-shelf touch-screen mobile devices. This is achieved using audio feedback to guide the user's finger on the device's touch interface to convey geometry. Our user-study evaluation shows Timbremap is effective in conveying non-trivial geometry and enabling visually impaired users to explore indoor layouts.},
+booktitle = {Proceedings of the 12th International Conference on Human Computer Interaction with Mobile Devices and Services},
+pages = {17–26},
+numpages = {10},
+keywords = {sonification, assistive, touch device, user interface},
+location = {Lisbon, Portugal},
+series = {MobileHCI '10}
+}
+@article{10.1145/3186894, author = {G\"{o}tzelmann, T.}, title = {Visually Augmented Audio-Tactile Graphics for Visually Impaired People}, year = {2018}, issue_date = {June 2018}, publisher = {Association for Computing Machinery}, address = {New York, NY, USA}, volume = {11}, number = {2}, issn = {1936-7228}, url = {https://doi.org/10.1145/3186894}, doi = {10.1145/3186894}, abstract = {Tactile graphics play an essential role in knowledge transfer for blind people. The tactile exploration of these graphics is often challenging because of the cognitive load caused by physiological constraints and their complexity. The coupling of physical tactile graphics with electronic devices offers to support the tactile exploration by auditory feedback. Often, these systems have strict constraints regarding their mobility or the process of coupling both components. Additionally, visually impaired people cannot appropriately benefit from their residual vision. This article presents a concept for 3D printed tactile graphics, which offers to use audio-tactile graphics with usual smartphones or tablet-computers. By using capacitive markers, the coupling of the tactile graphics with the mobile device is simplified. These tactile graphics integrating these markers can be printed in one turn by off-the-shelf 3D printers without any post-processing and allows us to use multiple elevation levels for graphical elements. Based on the developed generic concept on visually augmented audio-tactile graphics, we presented a case study for maps. A prototypical implementation was tested by a user study with visually impaired people. All the participants were able to interact with the 3D printed tactile maps using a standard tablet computer. To study the effect of visual augmentation of graphical elements, we conducted another comprehensive user study. We tested multiple types of graphics and obtained evidence that visual augmentation may offer clear advantages for the exploration of tactile graphics. Even participants with a minor residual vision could solve the tasks with visual augmentation more quickly and accurately.}, journal = {ACM Trans. Access. Comput.}, month = {jun}, articleno = {8}, numpages = {31}, keywords = {visually impaired, blind, global, marker, touch screen, capacitive, orientation, Tactile graphics, audio-tactile, accessibility, capacitive sensing, augmented, 3D printing, tangible user interfaces}
+}
 @article{COBO2017294,
 title = {Differences between blind people's cognitive maps after proximity and distant exploration of virtual environments},
 journal = {Computers in Human Behavior},
