--- a/Notes/karter/karter.bib
+++ b/Notes/karter/karter.bib
@@ -1,38 +1,1 @@
-@article{watanabe2017evaluation,
-  title={Evaluation of virtual tactile dots on touchscreens in map reading: Perception of distance and direction},
-  author={Watanabe, Tetsuya and Kaga, Hirotsugu and Yagi, Tsubasa},
-  journal={Journal of Advanced Computational Intelligence and Intelligent Informatics},
-  volume={21},
-  number={1},
-  pages={79--86},
-  year={2017},
-  publisher={Fuji Technology Press Ltd.}
-}
-@article{dobrivsek2003evolution,
-  title={Evolution of the information-retrieval system for blind and visually-impaired people},
-  author={Dobri{\v{s}}ek, Simon and Gros, Jerneja and Vesnicer, Bo{\v{s}}tjan and others},
-  journal={International Journal of Speech Technology},
-  volume={6},
-  number={3},
-  pages={301--309},
-  year={2003},
-  publisher={Springer}
-}
-@article{thompson2018examination,
-  title={Examination of the Level of Inclusion of Blind Subjects in the Development of Touchscreen Accessibility Technologies},
-  author={Thompson, Robert Christopher},
-  year={2018}
-}
-@inproceedings{grussenmeyer2016feasibility,
-  title={Feasibility of using haptic directions through maps with a tablet and smart watch for people who are blind and visually impaired},
-  author={Grussenmeyer, William and Garcia, Jesel and Jiang, Fang},
-  booktitle={Proceedings of the 18th International Conference on Human-Computer Interaction with Mobile Devices and Services},
-  pages={83--89},
-  year={2016}
-}
-@misc{bandyopadhyay2017sound,
-  title={The sound and feel of titrations: A smartphone aid for color-blind and visually impaired students},
-  author={Bandyopadhyay, Subhajit and Rathod, Balraj B},
-  year={2017},
-  publisher={ACS Publications}
-}
+#references go inside here to reference from the markdown file simply use the @
